--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:1AdGPfpQD6Vi6D85cJeTxn9Wp4qMgja+5OuPJaakDNk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+
+DB_CONNECTION=pgsql
+DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=db_dimy_tech
+DB_USERNAME=postgres
+DB_PASSWORD=0
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
